infra/kubernetes/stg/default/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    # image: ubuntu:21.04
    image: alpine:3.13.5
    # image: nginx:1.21.0-alpine
    imagePullPolicy: IfNotPresent
    stdin: true
    tty: true
    resources:
      limits:
        cpu: 500m
        memory: 128Mi
    volumeMounts:
    - name: varlog
      mountPath: /var/log
    - name: varlibkubeletpods
      mountPath: /var/lib/kubelet/pods
    - name: varlibdockercontainers
      mountPath: /var/lib/docker/containers
      readOnly: true
  volumes:
  - name: varlog
    hostPath:
      path: /var/log
  - name: varlibkubeletpods
    hostPath:
      path: /var/lib/kubelet/pods
  - name: varlibdockercontainers
    hostPath:
      path: /var/lib/docker/containers
