infra/kubernetes/stg/default/admin-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-gateway
  labels:
    api: admin-gateway
spec:
  selector:
    app: admin-gateway
  # type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
