infra/kubernetes/stg/default/book-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-api
  labels:
    app: gran-book
    service: books
spec:
  selector:
    app: book-api
  # type: ClusterIP
  clusterIP: None
  ports:
  - name: grpc
    protocol: TCP
    port: 8080
    targetPort: 8080
