infra/kubernetes/stg/default/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gran-book
    service: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
