infra/kubernetes/stg/default/native-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: native-gateway
  labels:
    api: native-gateway
spec:
  selector:
    app: native-gateway
  # type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
